[gd_scene load_steps=15 format=3 uid="uid://bxlgthqsm5vr4"]

[ext_resource type="Script" path="res://_player/Player.gd" id="1_6x8y1"]

[ext_resource type="Script" path="res://_weapons/GunManager.gd" id="3_gunmanager"]
[ext_resource type="Script" path="res://_weapons/GunItem.gd" id="4_gunitem"]
[ext_resource type="Script" path="res://_weapons/GunProps.gd" id="5_gunprops"]
[ext_resource type="Script" path="res://_weapons/GunPhysics.gd" id="6_gunphysics"]
[ext_resource type="Script" path="res://_weapons/GunWeapon.gd" id="7_gunweapon"]
[ext_resource type="Script" path="res://_player/PlayerState.gd" id="8_playerstate"]
[ext_resource type="Script" path="res://_player/PlayerHealth.gd" id="9_playerhealth"]
[ext_resource type="Script" path="res://_player/PlayerMovement.gd" id="10_playermovement"]
[ext_resource type="Script" path="res://_player/PlayerCamera.gd" id="11_playercamera"]
[ext_resource type="Script" path="res://_player/PlayerInput.gd" id="12_playerinput"]
[ext_resource type="Script" path="res://_player/PlayerAPI.gd" id="13_playerapi"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1"]
radius = 0.4
height = 1.8

[sub_resource type="BoxMesh" id="BoxMesh_1"]
size = Vector3(0.6, 1.6, 0.3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0, 0, 1, 1)
flags_unshaded = true

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_6x8y1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
visible = true

[node name="PlayerModel" type="MeshInstance3D" parent="MeshInstance3D"]
mesh = SubResource("BoxMesh_1")
material_override = SubResource("StandardMaterial3D_1")

[node name="CameraController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)

[node name="Camera3D" type="Camera3D" parent="CameraController"]
fov = 90.0

[node name="HeadBobTimer" type="Timer" parent="."]
wait_time = 0.016
autostart = true

[node name="GunManager" type="Node" parent="."]
script = ExtResource("3_gunmanager")

[node name="GunItem" type="Node" parent="."]
script = ExtResource("4_gunitem")

[node name="GunProps" type="Node" parent="."]
script = ExtResource("5_gunprops")

[node name="GunPhysics" type="Node" parent="."]
script = ExtResource("6_gunphysics")

[node name="GunWeapon" type="Node" parent="."]
script = ExtResource("7_gunweapon")

[node name="PlayerState" type="Node" parent="."]
script = ExtResource("8_playerstate")

[node name="PlayerHealth" type="Node" parent="."]
script = ExtResource("9_playerhealth")

[node name="PlayerMovement" type="Node" parent="."]
script = ExtResource("10_playermovement")

[node name="PlayerCamera" type="Node" parent="."]
script = ExtResource("11_playercamera")

[node name="PlayerInput" type="Node" parent="."]
script = ExtResource("12_playerinput")

[node name="PlayerAPI" type="Node" parent="."]
script = ExtResource("13_playerapi")

[connection signal="timeout" from="HeadBobTimer" to="." method="_on_head_bob_timer_timeout"]